samples/_failures_safe/1761460004_77c8ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_451aa771.c: In function ‘main’:
./samples/SAFE/__tmp_451aa771.c:147:5: error: expected declaration or statement at end of input
  147 |     for (int i = 0; i < 3; i++) {
      |     ^~~
./samples/SAFE/__tmp_451aa771.c:147:5: error: expected declaration or statement at end of input
